[package]
name = "mole-proxy-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33.3", default-features = false, features = [
    "glow",
    "x11",
    "default_fonts"
] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
image = "0.25"
